# 3divvy

./: .gitignore  Pulumi.default.yaml  Pulumi.yaml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
amplify/: backend.ts
amplify-react-application/: package-lock.json  package.json
amplify-react-application/amplify/: team-provider-info.json
amplify-react-application/amplify/.config/: project-config.json
amplify-react-application/amplify/backend/: backend-config.json
amplify-react-application/src/: App.css  App.js  aws-exports.js
amplify-react-application/src/components/: NavBar.js  Popup.js
amplify-react-application/src/pages/: Home.js  Market.js
amplify-react-application/src/styles/: homeStyle.css  marketStyle.css  navStyle.css
amplify/auth/post-confirmation/: handler.ts
amplify/data/: resource.ts
amplify/storage/: resource.ts
pulumi/: .__main__.py.swp  __main__.py
pulumi/create_db/: handler.py
pulumi/filter_jobs/: handler.py
src/: App.css  App.tsx  index.css  main.tsx
src/components/: ContractsTable.tsx  JobsTable.tsx  NavBar.jsx  NavBar.tsx  PopUp.tsx
src/pages/: DeleteContract.tsx  DeleteJob.tsx  EditContract.tsx  EditJob.tsx  Home.jsx  Home.tsx  Market.jsx  Market.tsx  NoPage.jsx  NoPage.tsx  PaymentInfo.tsx  profile.tsx
src/styles/: homeStyle.css  marketStyle.css  navStyle.css
src/ui-components/: UserProfileCreateForm.d.ts  UserProfileCreateForm.jsx  UserProfileUpdateForm.d.ts  UserProfileUpdateForm.jsx  index.tsx
src/ui-components/graphql/: mutations.ts  queries.ts  subscriptions.ts
ui/: landing.py
(+6 files in other folders)
