[tool.poetry]
name = "3divvy"
version = "0.1.0"
description = ""
authors = ["Tyler Ball <tyleraball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
boto3 = "^1.34.93"
pycognito = "^2024.2.0"


[tool.poetry.group.dev.dependencies]
pulumi = "^3.114.0"
pulumi-aws-native = "^0.103.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
