[tool.poetry]
name = "3divvy"
version = "0.1.0"
description = ""
authors = ["Tyler Ball <tyleraball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pulumi = "^3.114.0"
pulumi-aws-native = "^0.103.0"
pulumi-aws = "^6.34.1"
pulumi-aws-apigateway = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
